--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "build": "webpack",
     "start": "webpack-dev-server"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
-
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.1.1",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "raw-loader": "^4.0.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
-
 }
